--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,10 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
 
 group = 'masterSpringMvc'
 version = '0.0.1-SNAPSHOT'
@@ -24,6 +27,10 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter')
+	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+task wrapper(type: Wrapper){
+gradleVersion = '4.5.1'
 }
